# locopy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  MANIFEST.in  Makefile  README.rst  ROADMAP.rst  developer.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  recipes.html  requirements-black.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  snowflake.html  sql_injection.html
.github/workflows/: edgetest.yml  publish-docs.yml  publish-package.yml  python-package.yml
_modules/: index.html
_modules/locopy/: database.html  errors.html  locopy.html  logger.html  redshift.html  s3.html  snowflake.html  utility.html
_sources/: developer.rst.txt  examples.rst.txt  index.rst.txt  recipes.rst.txt  snowflake.rst.txt  sql_injection.rst.txt
_sources/api/: locopy.database.rst.txt  locopy.errors.rst.txt  locopy.locopy.rst.txt  locopy.logger.rst.txt  locopy.redshift.rst.txt  locopy.rst.txt  locopy.s3.rst.txt  locopy.snowflake.rst.txt  locopy.utility.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: locopy.database.html  locopy.errors.html  locopy.html  locopy.locopy.html  locopy.logger.html  locopy.redshift.html  locopy.s3.html  locopy.snowflake.html  locopy.utility.html  modules.html
docs/: Makefile
docs/source/: conf.py  developer.rst  examples.rst  index.rst  recipes.rst  snowflake.rst
example/: README.md  create_example_table.sql  example.yaml  example_small.csv
locopy/: __init__.py  _version.py  base.py  database.py  errors.py  locopy.py  logger.py  postgres.py  postgres_base.py  redshift.py  s3.py  snowflake.py  utility.py
tests/: LICENSE  __init__.py  conftest.py  test_base.py  test_database.py  test_integration.py  test_integration_sf.py  test_locopy.py  test_postgres.py  test_redshift.py  test_s3.py  test_snowflake.py  test_utility.py
tests/data/: .locopy-sfrc  .locopyrc  cat_3.txt  mock_dataframe.parquet  mock_dataframe.txt  mock_dataframe_2.txt  mock_file.json  mock_file.txt  mock_file_header.txt  mock_output_file_header.txt.0  mock_output_file_header.txt.1
