[project]
name = "locopy"
description = "Loading/Unloading to Amazon Redshift using Python"
readme = "README.rst"
authors = [
  { name="Faisal Dosani", email="faisal.dosani@capitalone.com" },
]
license = {text = "Apache Software License"}
dependencies = ["boto3<=1.42.34,>=1.9.92", "PyYAML<=6.0.2,>=5.1", "pandas<=2.3.3,>=1.5.0", "numpy<=2.2.6,>=1.22.0", "polars>=0.20.0", "pyarrow>=10.0.1"]

requires-python = ">=3.9.0"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/capitalone/locopy"
Documentation = "https://capitalone.github.io/locopy/"

[tool.setuptools]
packages = ["locopy"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "locopy._version.__version__"}

[project.optional-dependencies]
psycopg2 = ["psycopg2-binary>=2.7.7"]
pg8000 = ["pg8000>=1.13.1"]
snowflake = ["snowflake-connector-python[pandas]>=2.1.2"]
docs = ["sphinx", "sphinx_rtd_theme"]
tests = ["hypothesis", "pytest", "pytest-cov"]
qa = ["pre-commit", "ruff==0.11.12"]
build = ["build", "twine", "wheel"]
edgetest = ["edgetest", "edgetest-conda"]
dev = ["locopy[tests]", "locopy[docs]", "locopy[qa]", "locopy[build]"]

# Linters, formatters and type checkers
[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py39"
src = ["src"]


[tool.ruff.lint]
preview = true
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    # "A", # flake8-builtins
    "C4", # flake8-comprehensions
    #"C901", # mccabe complexity
    # "G", # flake8-logging-format
    "T20", # flake8-print
    "TID252", # flake8-tidy-imports ban relative imports
    # "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "NPY", # numpy rules
    "LOG", # flake8-logging
    "RUF", # Ruff errors
]


ignore = [
    "E111",  # Check indentation level. Using formatter instead.
    "E114",  # Check indentation level. Using formatter instead.
    "E117",  # Check indentation level. Using formatter instead.
    "E203",  # Check whitespace. Using formatter instead.
    "E501",  # Line too long. Using formatter instead.
    "D206",  # Docstring indentation. Using formatter instead.
    "D300",  # Use triple single quotes. Using formatter instead.
    "SIM108",  # Use ternary operator instead of if-else blocks.
    "SIM105", # Use `contextlib.suppress(FileNotFoundError)` instead of `try`-`except`-`pass`
    "UP035", # `typing.x` is deprecated, use `x` instead
    "UP006", # `typing.x` is deprecated, use `x` instead
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs}/*" = ["E402", "D", "F841", "ARG"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[edgetest.envs.core]
python_version = "3.10"
extras = [
	"tests",
	"psycopg2",
	"pg8000",
	"snowflake",
]
command = "pytest tests -m 'not integration'"
upgrade = [
	"boto3",
	"PyYAML",
	"pandas",
	"numpy",
]

[tool.pytest.ini_options]
markers = [
    "integration",
]
