[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[options]
install_requires = 

[edgetest.envs.core]
python_version = 3.9
extras = 
	tests
	psycopg2
	pg8000
	snowflake
command = 
	pytest tests -m 'not integration'
upgrade = 
	boto3
	PyYAML
	pandas

